# apps/api/openapi.json
@@ -1395,6 +1395,17 @@
             "title": "Payload Offset",
             "type": "integer"
           },
+          "payload_sha256": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Payload Sha256"
+          },
           "recording_id": {
             "anyOf": [
               {
